@@ -223,13 +223,19 @@
     <string name="elem_RotEncoder_tt">Rotary knob with rotary encoder. Used to detect rotational movements.</string>
     <string name="elem_RotEncoder_pin_A">encoder signal A</string>
     <string name="elem_RotEncoder_pin_B">encoder signal B</string>
+
     <string name="elem_Keyboard">Keyboard</string>
     <string name="elem_Keyboard_tt">A keyboard that can be used to enter text.
-        This component buffers the inputs, which can then be read out.
+        This component buffers the input, which can then be read out.
         A separate window is opened for the text input.
     </string>
-    <string name="elem_Keyboard_pin_sel">If high the output D is active and one keystroke is output.</string>
-    <string name="elem_Keyboard_pin_D">The last pressed key, or zero if no key is typed.</string>
+    <string name="elem_Keyboard_pin_C">Clock. A rising edge removes the oldest character from the buffer.</string>
+    <string name="elem_Keyboard_pin_en">If high the output D is active and one character is output.
+        It also enables the clock input.</string>
+    <string name="elem_Keyboard_pin_D">The last typed character, or zero if no character is available.</string>
+    <string name="elem_Keyboard_pin_av">This output indicates that characters are available.
+        It can be used to trigger an interrupt.</string>
+
     <string name="elem_Terminal">Terminal</string>
     <string name="elem_Terminal_tt">You can write ASCII characters to this terminal.
         The terminal opens its own window to visualize the output.</string>
@@ -1417,6 +1423,7 @@
         If this is not the case, the error message of the external application is displayed.
         If possible, the input and output definitions are also adapted to the current code.</string>
     <string name="msg_applicationFileNotFound">Executable file "{0}" not found!</string>
+    <string name="msg_enterText">Enter Text!</string>
 
     <string name="ok">Ok</string>
     <string name="rot_0">0°</string>
