@@ -170,7 +170,7 @@
     <visualElement>
       <elementName>Terminal</elementName>
       <elementAttributes/>
-      <pos x="420" y="900"/>
+      <pos x="420" y="920"/>
     </visualElement>
     <visualElement>
       <elementName>VDD</elementName>
@@ -576,6 +576,10 @@
       <p2 x="800" y="640"/>
     </wire>
     <wire>
+      <p1 x="400" y="960"/>
+      <p2 x="420" y="960"/>
+    </wire>
+    <wire>
       <p1 x="240" y="260"/>
       <p2 x="260" y="260"/>
     </wire>
@@ -618,10 +622,6 @@
     <wire>
       <p1 x="460" y="580"/>
       <p2 x="480" y="580"/>
-    </wire>
-    <wire>
-      <p1 x="380" y="900"/>
-      <p2 x="420" y="900"/>
     </wire>
     <wire>
       <p1 x="780" y="200"/>
@@ -776,7 +776,7 @@
       <p2 x="1160" y="660"/>
     </wire>
     <wire>
-      <p1 x="400" y="920"/>
+      <p1 x="380" y="920"/>
       <p2 x="420" y="920"/>
     </wire>
     <wire>
@@ -924,6 +924,10 @@
       <p2 x="640" y="680"/>
     </wire>
     <wire>
+      <p1 x="400" y="940"/>
+      <p2 x="420" y="940"/>
+    </wire>
+    <wire>
       <p1 x="780" y="620"/>
       <p2 x="800" y="620"/>
     </wire>
@@ -960,10 +964,6 @@
       <p2 x="680" y="300"/>
     </wire>
     <wire>
-      <p1 x="400" y="940"/>
-      <p2 x="420" y="940"/>
-    </wire>
-    <wire>
       <p1 x="580" y="560"/>
       <p2 x="620" y="560"/>
     </wire>
@@ -994,6 +994,10 @@
     <wire>
       <p1 x="760" y="880"/>
       <p2 x="880" y="880"/>
+    </wire>
+    <wire>
+      <p1 x="400" y="880"/>
+      <p2 x="420" y="880"/>
     </wire>
     <wire>
       <p1 x="600" y="500"/>
@@ -1276,8 +1280,8 @@
       <p2 x="400" y="580"/>
     </wire>
     <wire>
-      <p1 x="400" y="920"/>
-      <p2 x="400" y="940"/>
+      <p1 x="400" y="940"/>
+      <p2 x="400" y="960"/>
     </wire>
     <wire>
       <p1 x="400" y="580"/>
@@ -1305,11 +1309,15 @@
     </wire>
     <wire>
       <p1 x="400" y="860"/>
-      <p2 x="400" y="920"/>
+      <p2 x="400" y="880"/>
     </wire>
     <wire>
       <p1 x="400" y="360"/>
       <p2 x="400" y="400"/>
+    </wire>
+    <wire>
+      <p1 x="400" y="880"/>
+      <p2 x="400" y="940"/>
     </wire>
     <wire>
       <p1 x="600" y="100"/>
@@ -1653,7 +1661,7 @@
     </wire>
     <wire>
       <p1 x="380" y="820"/>
-      <p2 x="380" y="900"/>
+      <p2 x="380" y="920"/>
     </wire>
   </wires>
   <measurementOrdering/>
